Added some content

--- a/games.html
+++ b/games.html
@@ -26,5 +26,9 @@
 				</ul>
 			</nav>
 		</header>
+
+		<article>
+			<a href="https://ducksaremammals.itch.io">All of my games.</a>
+		</article>
 	</body>
 </html>
