--- a/resume.html
+++ b/resume.html
@@ -25,6 +25,10 @@
 					</li>
 				</ul>
 			</nav>
+
+			<article>
+				<p>This is coming soon I guess</p>
+			</article>
 		</header>
 	</body>
 </html>
