--- a/art.html
+++ b/art.html
@@ -26,5 +26,11 @@
 				</ul>
 			</nav>
 		</header>
+
+		<article>
+			<a href="https://www.instagram.com/_ducksaremammals_/">
+				All my art
+			</a>
+		</article>
 	</body>
 </html>
