Added a bunch of styles and made the menu better

--- a/games.html
+++ b/games.html
@@ -10,25 +10,19 @@
 			<h1>DucksAreMammals</h1>
 
 			<nav>
-				<ul>
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-						<a href="resume.html">Resume (Coming soon)</a>
-					</li>
-					<li>
-						<a href="art.html">Art</a>
-					</li>
-					<li>
-						<a href="games.html">Games</a>
-					</li>
-				</ul>
+				<a href="index.html">Home</a>
+				<a href="resume.html">Resume (Coming soon)</a>
+				<a href="art.html">Art</a>
+				<a href="games.html">Games</a>
 			</nav>
 		</header>
 
 		<article>
 			<a href="https://ducksaremammals.itch.io">All of my games.</a>
 		</article>
+
+		<footer>
+			<p>Copyright &copy; 2014 DucksAreMammals</p>
+		</footer>
 	</body>
 </html>
