--- a/index.html
+++ b/index.html
@@ -10,26 +10,20 @@
 			<h1>DucksAreMammals</h1>
 
 			<nav>
-				<ul>
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-						<a href="resume.html">Resume (Coming soon)</a>
-					</li>
-					<li>
-						<a href="art.html">Art</a>
-					</li>
-					<li>
-						<a href="games.html">Games</a>
-					</li>
-				</ul>
+				<a href="index.html">Home</a>
+				<a href="resume.html">Resume (Coming soon)</a>
+				<a href="art.html">Art</a>
+				<a href="games.html">Games</a>
 			</nav>
 		</header>
 
 		<article>
-			<h1>About me</h1>
+			<h2>About me</h2>
 			<p>I'm a software developer. I also make games and Blender art.</p>
 		</article>
+
+		<footer>
+			<p>Copyright &copy; 2014 DucksAreMammals</p>
+		</footer>
 	</body>
 </html>
