--- a/art.html
+++ b/art.html
@@ -10,20 +10,10 @@
 			<h1>DucksAreMammals</h1>
 
 			<nav>
-				<ul>
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-						<a href="resume.html">Resume (Coming soon)</a>
-					</li>
-					<li>
-						<a href="art.html">Art</a>
-					</li>
-					<li>
-						<a href="games.html">Games</a>
-					</li>
-				</ul>
+				<a href="index.html">Home</a>
+				<a href="resume.html">Resume (Coming soon)</a>
+				<a href="art.html">Art</a>
+				<a href="games.html">Games</a>
 			</nav>
 		</header>
 
@@ -32,5 +22,9 @@
 				All my art
 			</a>
 		</article>
+
+		<footer>
+			<p>Copyright &copy; 2014 DucksAreMammals</p>
+		</footer>
 	</body>
 </html>
