--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>DucksAreMammals</title>
+		<title>Bjorn Lucas</title>
 		<link href="main.css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<header>
-			<h1>DucksAreMammals</h1>
+			<h1>Bjorn Lucas</h1>
 
 			<nav>
 				<a href="index.html">Home</a>
@@ -22,7 +22,8 @@
 		</article>
 
 		<footer>
-			<p>Copyright &copy; 2022 DucksAreMammals</p>
+			<p>Copyright &copy; 2025 Bjorn Lucas</p>
 		</footer>
+		<script src="script.js"></script>
 	</body>
 </html>
